--- a/tiktok-frontend/package.json
+++ b/tiktok-frontend/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@material-ui/core": "^4.11.0",
+    "@mui/icons-material": "^5.8.4",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-scripts": "3.4.1",
+    "react-ticker": "^1.2.2"
   },
   "devDependencies": {
     "eslint": "8.18.0",
