--- a/tiktok-frontend/package.json
+++ b/tiktok-frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.11.0",
     "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
